ocio-sys/src/bridge.hpp

// --- GradingRGBCurveTransform ---
void* ocio_grading_rgb_curve_transform_create(void);
void* ocio_grading_rgb_curve_transform_create_with_style(int style);
void ocio_grading_rgb_curve_transform_destroy(void* handle);
void* ocio_grading_rgb_curve_transform_get_format_metadata(void* handle);
void* ocio_grading_rgb_curve_transform_get_format_metadata_v1(void* handle);
void* ocio_grading_rgb_curve_transform_get_format_metadata_v2(void* handle);
bool ocio_grading_rgb_curve_transform_equals(void* handle, void* other);
int ocio_grading_rgb_curve_transform_get_direction(void* handle);
void ocio_grading_rgb_curve_transform_set_direction(void* handle, int dir);
int ocio_grading_rgb_curve_transform_get_style(void* handle);
void ocio_grading_rgb_curve_transform_set_style(void* handle, int style);
void* ocio_grading_rgb_curve_transform_get_value(void* handle);
void ocio_grading_rgb_curve_transform_set_value(void* handle, void* values);
int ocio_grading_rgb_curve_transform_get_num_control_points(void* handle, int c);
void ocio_grading_rgb_curve_transform_get_control_point(void* handle, int c, int index, float* x, float* y);
void ocio_grading_rgb_curve_transform_set_num_control_points(void* handle, int c, int num);
void ocio_grading_rgb_curve_transform_set_control_point(void* handle, int c, int index, float x, float y);
float ocio_grading_rgb_curve_transform_get_slope(void* handle, int c, size_t index);
void ocio_grading_rgb_curve_transform_set_slope(void* handle, int c, size_t index, float slope);
bool ocio_grading_rgb_curve_transform_slopes_are_default(void* handle, int c);
bool ocio_grading_rgb_curve_transform_get_bypass_lin_to_log(void* handle);
void ocio_grading_rgb_curve_transform_set_bypass_lin_to_log(void* handle, bool bypass);
bool ocio_grading_rgb_curve_transform_is_dynamic(void* handle);
void ocio_grading_rgb_curve_transform_make_dynamic(void* handle);
void ocio_grading_rgb_curve_transform_make_non_dynamic(void* handle);
// --- GradingHueCurveTransform ---
void* ocio_grading_hue_curve_transform_create(void);
void* ocio_grading_hue_curve_transform_create_with_style(int style);
void ocio_grading_hue_curve_transform_destroy(void* handle);
void* ocio_grading_hue_curve_transform_get_format_metadata(void* handle);
void* ocio_grading_hue_curve_transform_get_format_metadata_v1(void* handle);
void* ocio_grading_hue_curve_transform_get_format_metadata_v2(void* handle);
bool ocio_grading_hue_curve_transform_equals(void* handle, void* other);
int ocio_grading_hue_curve_transform_get_direction(void* handle);
void ocio_grading_hue_curve_transform_set_direction(void* handle, int dir);
int ocio_grading_hue_curve_transform_get_style(void* handle);
void ocio_grading_hue_curve_transform_set_style(void* handle, int style);
void* ocio_grading_hue_curve_transform_get_value(void* handle);
void ocio_grading_hue_curve_transform_set_value(void* handle, void* value);
int ocio_grading_hue_curve_transform_get_num_control_points(void* handle, int c);
void ocio_grading_hue_curve_transform_get_control_point(void* handle, int c, int index, float* x, float* y);
void ocio_grading_hue_curve_transform_set_num_control_points(void* handle, int c, int num);
void ocio_grading_hue_curve_transform_set_control_point(void* handle, int c, int index, float x, float y);
float ocio_grading_hue_curve_transform_get_slope(void* handle, int c, size_t index);
void ocio_grading_hue_curve_transform_set_slope(void* handle, int c, size_t index, float slope);
bool ocio_grading_hue_curve_transform_slopes_are_default(void* handle, int c);
int ocio_grading_hue_curve_transform_get_rgb_to_hsy(void* handle);
void ocio_grading_hue_curve_transform_set_rgb_to_hsy(void* handle, int style);
bool ocio_grading_hue_curve_transform_is_dynamic(void* handle);
void ocio_grading_hue_curve_transform_make_dynamic(void* handle);
void ocio_grading_hue_curve_transform_make_non_dynamic(void* handle);
// --- GradingToneTransform ---
void* ocio_grading_tone_transform_create(void);
void* ocio_grading_tone_transform_create_with_style(int style);
void ocio_grading_tone_transform_destroy(void* handle);
void* ocio_grading_tone_transform_get_format_metadata(void* handle);
void* ocio_grading_tone_transform_get_format_metadata_v1(void* handle);
void* ocio_grading_tone_transform_get_format_metadata_v2(void* handle);
bool ocio_grading_tone_transform_equals(void* handle, void* other);
int ocio_grading_tone_transform_get_style(void* handle);
void ocio_grading_tone_transform_set_style(void* handle, int style);
void* ocio_grading_tone_transform_get_value(void* handle);
void ocio_grading_tone_transform_set_value(void* handle, void* values);
bool ocio_grading_tone_transform_copy_value(void* handle, double* values, size_t len);
bool ocio_grading_tone_transform_set_value_from_f64(void* handle, const double* values, size_t len);
bool ocio_grading_tone_transform_is_dynamic(void* handle);
void ocio_grading_tone_transform_make_dynamic(void* handle);
void ocio_grading_tone_transform_make_non_dynamic(void* handle);
// --- GroupTransform ---
void* ocio_group_transform_create(void);
void ocio_group_transform_destroy(void* handle);
void* ocio_group_transform_get_format_metadata(void* handle);
void* ocio_group_transform_get_format_metadata_v1(void* handle);
void* ocio_group_transform_get_format_metadata_v2(void* handle);
void* ocio_group_transform_get_transform(void* handle, int index);
void* ocio_group_transform_get_transform_v1(void* handle, int index);
int ocio_group_transform_get_num_transforms(void* handle);
void ocio_group_transform_append_transform(void* handle, void* transform);
void ocio_group_transform_prepend_transform(void* handle, void* transform);
void ocio_group_transform_write(void* handle, void* config, const char* formatName, void* os);
void* ocio_group_transform_write_to_string(void* handle, void* config, const char* formatName);
int ocio_group_transform_get_num_write_formats(void);
const char* ocio_group_transform_get_format_name_by_index(int index);
const char* ocio_group_transform_get_format_extension_by_index(int index);
// --- LogAffineTransform ---
void* ocio_log_affine_transform_create(void);
void ocio_log_affine_transform_destroy(void* handle);
void* ocio_log_affine_transform_get_format_metadata(void* handle);
void* ocio_log_affine_transform_get_format_metadata_v1(void* handle);
void* ocio_log_affine_transform_get_format_metadata_v2(void* handle);
bool ocio_log_affine_transform_equals(void* handle, void* other);
double ocio_log_affine_transform_get_base(void* handle);
void ocio_log_affine_transform_set_base(void* handle, double base);
// --- LogCameraTransform ---
void* ocio_log_camera_transform_create(void);
void* ocio_log_camera_transform_create_with_lin_side_break(const double* values);
void ocio_log_camera_transform_destroy(void* handle);
void* ocio_log_camera_transform_get_format_metadata(void* handle);
void* ocio_log_camera_transform_get_format_metadata_v1(void* handle);
void* ocio_log_camera_transform_get_format_metadata_v2(void* handle);
bool ocio_log_camera_transform_equals(void* handle, void* other);
int ocio_log_camera_transform_get_direction(void* handle);
void ocio_log_camera_transform_set_direction(void* handle, int dir);
double ocio_log_camera_transform_get_base(void* handle);
void ocio_log_camera_transform_set_base(void* handle, double base);
void ocio_log_camera_transform_get_log_side_slope_value(void* handle, double* values);
void ocio_log_camera_transform_set_log_side_slope_value(void* handle, const double* values);
void ocio_log_camera_transform_get_log_side_offset_value(void* handle, double* values);
void ocio_log_camera_transform_set_log_side_offset_value(void* handle, const double* values);
void ocio_log_camera_transform_get_lin_side_slope_value(void* handle, double* values);
void ocio_log_camera_transform_set_lin_side_slope_value(void* handle, const double* values);
void ocio_log_camera_transform_get_lin_side_offset_value(void* handle, double* values);
void ocio_log_camera_transform_set_lin_side_offset_value(void* handle, const double* values);
void ocio_log_camera_transform_get_lin_side_break_value(void* handle, double* values);
void ocio_log_camera_transform_set_lin_side_break_value(void* handle, const double* values);
bool ocio_log_camera_transform_get_linear_slope_value(void* handle, double* values);
void ocio_log_camera_transform_set_linear_slope_value(void* handle, const double* values);
void ocio_log_camera_transform_unset_linear_slope_value(void* handle);