ocio-sys/src/lib.rs


    // --- GradingRGBCurveTransform ---
    pub fn ocio_grading_rgb_curve_transform_create() -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_create_with_style(style: i32) -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_destroy(handle: *mut c_void);
    pub fn ocio_grading_rgb_curve_transform_get_format_metadata(handle: *mut c_void)
        -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_get_format_metadata_v1(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_get_format_metadata_v2(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_equals(handle: *mut c_void, other: *mut c_void)
        -> bool;
    pub fn ocio_grading_rgb_curve_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_grading_rgb_curve_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_grading_rgb_curve_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_grading_rgb_curve_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_grading_rgb_curve_transform_get_value(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_rgb_curve_transform_set_value(
        handle: *mut c_void,
        values: *mut c_void,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_get_num_control_points(
        handle: *mut c_void,
        c: i32,
    ) -> i32;
    pub fn ocio_grading_rgb_curve_transform_get_control_point(
        handle: *mut c_void,
        c: i32,
        index: i32,
        x: *mut f32,
        y: *mut f32,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_set_num_control_points(
        handle: *mut c_void,
        c: i32,
        num: i32,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_set_control_point(
        handle: *mut c_void,
        c: i32,
        index: i32,
        x: f32,
        y: f32,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_get_slope(
        handle: *mut c_void,
        c: i32,
        index: usize,
    ) -> f32;
    pub fn ocio_grading_rgb_curve_transform_set_slope(
        handle: *mut c_void,
        c: i32,
        index: usize,
        slope: f32,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_slopes_are_default(handle: *mut c_void, c: i32)
        -> bool;
    pub fn ocio_grading_rgb_curve_transform_get_bypass_lin_to_log(handle: *mut c_void) -> bool;
    pub fn ocio_grading_rgb_curve_transform_set_bypass_lin_to_log(
        handle: *mut c_void,
        bypass: bool,
    ) -> ();
    pub fn ocio_grading_rgb_curve_transform_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_grading_rgb_curve_transform_make_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_grading_rgb_curve_transform_make_non_dynamic(handle: *mut c_void) -> ();

    // --- GradingHueCurveTransform ---
    pub fn ocio_grading_hue_curve_transform_create() -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_create_with_style(style: i32) -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_destroy(handle: *mut c_void);
    pub fn ocio_grading_hue_curve_transform_get_format_metadata(handle: *mut c_void)
        -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_get_format_metadata_v1(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_get_format_metadata_v2(
        handle: *mut c_void,
    ) -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_equals(handle: *mut c_void, other: *mut c_void)
        -> bool;
    pub fn ocio_grading_hue_curve_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_grading_hue_curve_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_grading_hue_curve_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_grading_hue_curve_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_grading_hue_curve_transform_get_value(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_hue_curve_transform_set_value(
        handle: *mut c_void,
        value: *mut c_void,
    ) -> ();
    pub fn ocio_grading_hue_curve_transform_get_num_control_points(
        handle: *mut c_void,
        c: i32,
    ) -> i32;
    pub fn ocio_grading_hue_curve_transform_get_control_point(
        handle: *mut c_void,
        c: i32,
        index: i32,
        x: *mut f32,
        y: *mut f32,
    ) -> ();
    pub fn ocio_grading_hue_curve_transform_set_num_control_points(
        handle: *mut c_void,
        c: i32,
        num: i32,
    ) -> ();
    pub fn ocio_grading_hue_curve_transform_set_control_point(
        handle: *mut c_void,
        c: i32,
        index: i32,
        x: f32,
        y: f32,
    ) -> ();
    pub fn ocio_grading_hue_curve_transform_get_slope(
        handle: *mut c_void,
        c: i32,
        index: usize,
    ) -> f32;
    pub fn ocio_grading_hue_curve_transform_set_slope(
        handle: *mut c_void,
        c: i32,
        index: usize,
        slope: f32,
    ) -> ();
    pub fn ocio_grading_hue_curve_transform_slopes_are_default(handle: *mut c_void, c: i32)
        -> bool;
    pub fn ocio_grading_hue_curve_transform_get_rgb_to_hsy(handle: *mut c_void) -> i32;
    pub fn ocio_grading_hue_curve_transform_set_rgb_to_hsy(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_grading_hue_curve_transform_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_grading_hue_curve_transform_make_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_grading_hue_curve_transform_make_non_dynamic(handle: *mut c_void) -> ();

    // --- GradingToneTransform ---
    pub fn ocio_grading_tone_transform_create() -> *mut c_void;
    pub fn ocio_grading_tone_transform_create_with_style(style: i32) -> *mut c_void;
    pub fn ocio_grading_tone_transform_destroy(handle: *mut c_void);
    pub fn ocio_grading_tone_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_tone_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_tone_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_tone_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_grading_tone_transform_get_style(handle: *mut c_void) -> i32;
    pub fn ocio_grading_tone_transform_set_style(handle: *mut c_void, style: i32) -> ();
    pub fn ocio_grading_tone_transform_get_value(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_grading_tone_transform_set_value(handle: *mut c_void, values: *mut c_void) -> ();
    pub fn ocio_grading_tone_transform_copy_value(
        handle: *mut c_void,
        values: *mut f64,
        len: usize,
    ) -> bool;
    pub fn ocio_grading_tone_transform_set_value_from_f64(
        handle: *mut c_void,
        values: *const f64,
        len: usize,
    ) -> bool;
    pub fn ocio_grading_tone_transform_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_grading_tone_transform_make_dynamic(handle: *mut c_void) -> ();
    pub fn ocio_grading_tone_transform_make_non_dynamic(handle: *mut c_void) -> ();

    // --- GroupTransform ---
    pub fn ocio_group_transform_create() -> *mut c_void;
    pub fn ocio_group_transform_destroy(handle: *mut c_void);
    pub fn ocio_group_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_group_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_group_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_group_transform_get_transform(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_group_transform_get_transform_v1(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_group_transform_get_num_transforms(handle: *mut c_void) -> i32;
    pub fn ocio_group_transform_append_transform(handle: *mut c_void, transform: *mut c_void)
        -> ();
    pub fn ocio_group_transform_prepend_transform(
        handle: *mut c_void,
        transform: *mut c_void,
    ) -> ();
    pub fn ocio_group_transform_write(
        handle: *mut c_void,
        config: *mut c_void,
        formatName: *const i8,
        os: *mut c_void,
    ) -> ();
    pub fn ocio_group_transform_write_to_string(
        handle: *mut c_void,
        config: *mut c_void,
        formatName: *const i8,
    ) -> *mut c_void;
    pub fn ocio_group_transform_get_num_write_formats() -> i32;
    pub fn ocio_group_transform_get_format_name_by_index(index: i32) -> *const i8;
    pub fn ocio_group_transform_get_format_extension_by_index(index: i32) -> *const i8;

    // --- LogAffineTransform ---
    pub fn ocio_log_affine_transform_create() -> *mut c_void;
    pub fn ocio_log_affine_transform_destroy(handle: *mut c_void);
    pub fn ocio_log_affine_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_affine_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_affine_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_affine_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_log_affine_transform_get_base(handle: *mut c_void) -> f64;
    pub fn ocio_log_affine_transform_set_base(handle: *mut c_void, base: f64) -> ();

    // --- LogCameraTransform ---
    pub fn ocio_log_camera_transform_create() -> *mut c_void;
    pub fn ocio_log_camera_transform_create_with_lin_side_break(values: *const f64) -> *mut c_void;
    pub fn ocio_log_camera_transform_destroy(handle: *mut c_void);
    pub fn ocio_log_camera_transform_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_camera_transform_get_format_metadata_v1(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_camera_transform_get_format_metadata_v2(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_log_camera_transform_equals(handle: *mut c_void, other: *mut c_void) -> bool;
    pub fn ocio_log_camera_transform_get_direction(handle: *mut c_void) -> i32;
    pub fn ocio_log_camera_transform_set_direction(handle: *mut c_void, dir: i32) -> ();
    pub fn ocio_log_camera_transform_get_base(handle: *mut c_void) -> f64;
    pub fn ocio_log_camera_transform_set_base(handle: *mut c_void, base: f64) -> ();
    pub fn ocio_log_camera_transform_get_log_side_slope_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> ();
    pub fn ocio_log_camera_transform_set_log_side_slope_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_get_log_side_offset_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> ();
    pub fn ocio_log_camera_transform_set_log_side_offset_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_get_lin_side_slope_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> ();
    pub fn ocio_log_camera_transform_set_lin_side_slope_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_get_lin_side_offset_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> ();
    pub fn ocio_log_camera_transform_set_lin_side_offset_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_get_lin_side_break_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> ();
    pub fn ocio_log_camera_transform_set_lin_side_break_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_get_linear_slope_value(
        handle: *mut c_void,
        values: *mut f64,
    ) -> bool;
    pub fn ocio_log_camera_transform_set_linear_slope_value(
        handle: *mut c_void,
        values: *const f64,
    ) -> ();
    pub fn ocio_log_camera_transform_unset_linear_slope_value(handle: *mut c_void) -> ();
